--- a/css/mobile.css
+++ b/css/mobile.css
@@ -484,3 +484,46 @@ tr:nth-child(even){background-color:#f2f2f2}
 /*footer*/
 footer{text-align:center;padding:1rem;font-size:0.7rem}
 footer a{text-decoration:none;}
+
+
+/* acordoin */
+.con-faq{padding:3rem;padding-top:0}
+.con-faq button.accordion{font-weight:600}
+.con-faq h4{font-size:1rem;font-family: 'Montserrat';}
+.accordion {
+  background-color: #F5F6F6;
+  color: #757475;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 14px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #DCB99B;
+  color:#fff
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
