--- a/css/mobile.css
+++ b/css/mobile.css
@@ -449,6 +449,11 @@ div.jfkicon{width:calc( 30% - 10px);z-index:10;box-sizing:border-box;}
 .jfkonten-jual-kolom3 .text-read-more button.shiny-blue{width:auto;padding-left:15px;padding-right:15px;}
 div[class*="jfkonten-jual-"]:last-child{padding-bottom:0}
 
+/*button history back*/
+.title-and-back{display:flex;box-sizing:border-box;}
+.button-back{;display:flex;justify-content: flex-end;align-items: center;padding:0.5rem;font-size:1.2rem}
+.title-undangan{display:flex;justify-content: flex-end;}
+
 .kolum-isi-jfkreatif-kebijakan-pripasi{padding:0 2rem;font-size:0.8rem}
 .kolum-isi-jfkreatif-kebijakan-pripasi ul{padding-right:1rem;margin-left:1rem}
 .tabel{overflow-x:auto;width:100%}
